
Summary 2000-07-09 ->2000-07-12
Torben is come back!
Torben add time and date support in kscript
=>you can write : in cell A1 : 2000-2-2
cell B1 : =A1+2
        =>result : 2000-2-4
Improved undo
bug fix


2000-07-12-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new script functions :
setMultirow(bool), multiRow(), setVerticalText(bool), verticalText()
setPrefix(),prefix(),setPostfix(),postfix(),setAlign(),align()
setAlignY(),align(),getFormatNumber(),  setFormatNumber()
-Improved a little kspread_dlg_layout->Font

Summary 2000-07-12 ->2000-07-15
Torben improved against kspread
=>fix a lot of bugs
Works with David Faure on kofficelib
etc...


2000-07-15-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now kspread can recognize scientific format when you write
1.25E-5
-Imporved kspread_dlg_layout
=>now I move backgroundcolor to pattern page
so now you can see pattern with its backgroundcolor
-Imporved show example format, I think that it works.
-Add new functions : DECHEX convert a decimal number to hexadecimal
DECBIN, DECOCT
-Add new fraction format (One digit, two digits and three digits)
Algo gave by jp martin
-Add functions documentations.

Torben changes:
-Rewritten drawing code.
It's very nice.
Correct some bugs, etc...

2000-07-16-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Add new script functions setTextBold(),setTextUnderLine() etc...


Summary 2000-07-16 ->2000-07-20
Torben corrected bug in save/load embedded component
=>now you can load a kspread file with kchart file
-corrected print bug.


2000-07-20-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-Now vertical text and multirow works when cell merged

2000-07-22-Montel laurent <montell@club-internet.fr>
----------------------------------------------------
-bug fix when I copy/paste cells (setPrecision)